Grammar/Parser/src/LengkuasSFLParser.cpp

// Generated from LengkuasSFL.g4 by ANTLR 4.13.1


#include "LengkuasSFLListener.h"

#include "LengkuasSFLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LengkuasSFLParserStaticData final {
  LengkuasSFLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LengkuasSFLParserStaticData(const LengkuasSFLParserStaticData&) = delete;
  LengkuasSFLParserStaticData(LengkuasSFLParserStaticData&&) = delete;
  LengkuasSFLParserStaticData& operator=(const LengkuasSFLParserStaticData&) = delete;
  LengkuasSFLParserStaticData& operator=(LengkuasSFLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag lengkuassflParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LengkuasSFLParserStaticData *lengkuassflParserStaticData = nullptr;

void lengkuassflParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (lengkuassflParserStaticData != nullptr) {
    return;
  }
#else
  assert(lengkuassflParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LengkuasSFLParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "variableDeclaration", "dataType", "expression", 
      "primaryExpression", "arithmeticOperator", "arithmeticOperation", 
      "templateLiteral", "functionDeclaration", "parameter", "controlFlow", 
      "ifStatement", "switchStatement", "caseBlock", "defaultBlock", "loop", 
      "whileLoop", "doWhileLoop", "forLoop", "ioOperation", "pointerReference", 
      "asyncBlock", "errorHandling", "throwStatement", "incrementDecrement"
    },
    std::vector<std::string>{
      "", "'str'", "'i32'", "'i64'", "'f32'", "'f64'", "'bool'", "'sstream'", 
      "'$'", "'${'", "'}$'", "'fun'", "'endfun'", "'if'", "'elif'", "'else'", 
      "'endif'", "'sw'", "'endsw'", "'case'", "'default'", "'while'", "'endwhile'", 
      "'do'", "'for'", "'endfor'", "'msgOut'", "'msgIn'", "'^'", "'desync'", 
      "'resync'", "'try'", "'catch'", "'endtry'", "'throw'", "'errMsg'", 
      "'prefix'", "'ecode'", "", "", "", "", "'nil'", "';'", "':'", "','", 
      "'.'", "'->'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", 
      "'{'", "'}'", "'['", "']'", "'++'", "'--'", "", "", "", "'&&'", "'||'", 
      "'!'", "'arr'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "IDENTIFIER", "NUMBER", "STRING", "BOOLEAN", "NIL", 
      "SEMICOLON", "COLON", "COMMA", "DOT", "ARROW", "ASSIGN", "PLUS", "MINUS", 
      "MULT", "DIV", "MOD", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
      "RBRACKET", "INCREMENT", "DECREMENT", "WS", "COMMENT", "MULTILINE_COMMENT", 
      "AND", "OR", "NOT", "ARR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  lengkuassflParserStaticData = staticData.release();
}

}

LengkuasSFLParser::LengkuasSFLParser(TokenStream *input) : LengkuasSFLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LengkuasSFLParser::LengkuasSFLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LengkuasSFLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *lengkuassflParserStaticData->atn, lengkuassflParserStaticData->decisionToDFA, lengkuassflParserStaticData->sharedContextCache, options);
}

LengkuasSFLParser::~LengkuasSFLParser() {
  delete _interpreter;
}

const atn::ATN& LengkuasSFLParser::getATN() const {
  return *lengkuassflParserStaticData->atn;
}

std::string LengkuasSFLParser::getGrammarFileName() const {
  return "LengkuasSFL.g4";
}

const std::vector<std::string>& LengkuasSFLParser::getRuleNames() const {
  return lengkuassflParserStaticData->ruleNames;
}

const dfa::Vocabulary& LengkuasSFLParser::getVocabulary() const {
  return lengkuassflParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LengkuasSFLParser::getSerializedATN() const {
  return lengkuassflParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LengkuasSFLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LengkuasSFLParser::ProgramContext::EOF() {
  return getToken(LengkuasSFLParser::EOF, 0);
}

std::vector<LengkuasSFLParser::StatementContext *> LengkuasSFLParser::ProgramContext::statement() {
  return getRuleContexts<LengkuasSFLParser::StatementContext>();
}

LengkuasSFLParser::StatementContext* LengkuasSFLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<LengkuasSFLParser::StatementContext>(i);
}


size_t LengkuasSFLParser::ProgramContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleProgram;
}

void LengkuasSFLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LengkuasSFLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

LengkuasSFLParser::ProgramContext* LengkuasSFLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LengkuasSFLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 18022922906118398) != 0) || _la == LengkuasSFLParser::NOT) {
      setState(52);
      statement();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(58);
    match(LengkuasSFLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

LengkuasSFLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LengkuasSFLParser::VariableDeclarationContext* LengkuasSFLParser::StatementContext::variableDeclaration() {
  return getRuleContext<LengkuasSFLParser::VariableDeclarationContext>(0);
}

LengkuasSFLParser::FunctionDeclarationContext* LengkuasSFLParser::StatementContext::functionDeclaration() {
  return getRuleContext<LengkuasSFLParser::FunctionDeclarationContext>(0);
}

LengkuasSFLParser::ControlFlowContext* LengkuasSFLParser::StatementContext::controlFlow() {
  return getRuleContext<LengkuasSFLParser::ControlFlowContext>(0);
}

LengkuasSFLParser::LoopContext* LengkuasSFLParser::StatementContext::loop() {
  return getRuleContext<LengkuasSFLParser::LoopContext>(0);
}

LengkuasSFLParser::IoOperationContext* LengkuasSFLParser::StatementContext::ioOperation() {
  return getRuleContext<LengkuasSFLParser::IoOperationContext>(0);
}

LengkuasSFLParser::ArithmeticOperationContext* LengkuasSFLParser::StatementContext::arithmeticOperation() {
  return getRuleContext<LengkuasSFLParser::ArithmeticOperationContext>(0);
}

LengkuasSFLParser::TemplateLiteralContext* LengkuasSFLParser::StatementContext::templateLiteral() {
  return getRuleContext<LengkuasSFLParser::TemplateLiteralContext>(0);
}

LengkuasSFLParser::ErrorHandlingContext* LengkuasSFLParser::StatementContext::errorHandling() {
  return getRuleContext<LengkuasSFLParser::ErrorHandlingContext>(0);
}

LengkuasSFLParser::PointerReferenceContext* LengkuasSFLParser::StatementContext::pointerReference() {
  return getRuleContext<LengkuasSFLParser::PointerReferenceContext>(0);
}

LengkuasSFLParser::AsyncBlockContext* LengkuasSFLParser::StatementContext::asyncBlock() {
  return getRuleContext<LengkuasSFLParser::AsyncBlockContext>(0);
}


size_t LengkuasSFLParser::StatementContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleStatement;
}

void LengkuasSFLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void LengkuasSFLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

LengkuasSFLParser::StatementContext* LengkuasSFLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, LengkuasSFLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(62);
      controlFlow();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(63);
      loop();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(64);
      ioOperation();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(65);
      arithmeticOperation();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(66);
      templateLiteral();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(67);
      errorHandling();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(68);
      pointerReference();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(69);
      asyncBlock();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

LengkuasSFLParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LengkuasSFLParser::DataTypeContext* LengkuasSFLParser::VariableDeclarationContext::dataType() {
  return getRuleContext<LengkuasSFLParser::DataTypeContext>(0);
}

tree::TerminalNode* LengkuasSFLParser::VariableDeclarationContext::IDENTIFIER() {
  return getToken(LengkuasSFLParser::IDENTIFIER, 0);
}

tree::TerminalNode* LengkuasSFLParser::VariableDeclarationContext::ASSIGN() {
  return getToken(LengkuasSFLParser::ASSIGN, 0);
}

LengkuasSFLParser::ExpressionContext* LengkuasSFLParser::VariableDeclarationContext::expression() {
  return getRuleContext<LengkuasSFLParser::ExpressionContext>(0);
}

tree::TerminalNode* LengkuasSFLParser::VariableDeclarationContext::ARR() {
  return getToken(LengkuasSFLParser::ARR, 0);
}


size_t LengkuasSFLParser::VariableDeclarationContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleVariableDeclaration;
}

void LengkuasSFLParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void LengkuasSFLParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}

LengkuasSFLParser::VariableDeclarationContext* LengkuasSFLParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, LengkuasSFLParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    dataType();
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LengkuasSFLParser::ARR) {
      setState(73);
      match(LengkuasSFLParser::ARR);
    }
    setState(76);
    match(LengkuasSFLParser::IDENTIFIER);
    setState(77);
    match(LengkuasSFLParser::ASSIGN);
    setState(78);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataTypeContext ------------------------------------------------------------------

LengkuasSFLParser::DataTypeContext::DataTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LengkuasSFLParser::DataTypeContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleDataType;
}

void LengkuasSFLParser::DataTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDataType(this);
}

void LengkuasSFLParser::DataTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDataType(this);
}

LengkuasSFLParser::DataTypeContext* LengkuasSFLParser::dataType() {
  DataTypeContext *_localctx = _tracker.createInstance<DataTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, LengkuasSFLParser::RuleDataType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 254) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

LengkuasSFLParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LengkuasSFLParser::PrimaryExpressionContext *> LengkuasSFLParser::ExpressionContext::primaryExpression() {
  return getRuleContexts<LengkuasSFLParser::PrimaryExpressionContext>();
}

LengkuasSFLParser::PrimaryExpressionContext* LengkuasSFLParser::ExpressionContext::primaryExpression(size_t i) {
  return getRuleContext<LengkuasSFLParser::PrimaryExpressionContext>(i);
}

std::vector<LengkuasSFLParser::ArithmeticOperatorContext *> LengkuasSFLParser::ExpressionContext::arithmeticOperator() {
  return getRuleContexts<LengkuasSFLParser::ArithmeticOperatorContext>();
}

LengkuasSFLParser::ArithmeticOperatorContext* LengkuasSFLParser::ExpressionContext::arithmeticOperator(size_t i) {
  return getRuleContext<LengkuasSFLParser::ArithmeticOperatorContext>(i);
}

tree::TerminalNode* LengkuasSFLParser::ExpressionContext::NOT() {
  return getToken(LengkuasSFLParser::NOT, 0);
}

std::vector<LengkuasSFLParser::ExpressionContext *> LengkuasSFLParser::ExpressionContext::expression() {
  return getRuleContexts<LengkuasSFLParser::ExpressionContext>();
}

LengkuasSFLParser::ExpressionContext* LengkuasSFLParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<LengkuasSFLParser::ExpressionContext>(i);
}

tree::TerminalNode* LengkuasSFLParser::ExpressionContext::OR() {
  return getToken(LengkuasSFLParser::OR, 0);
}

tree::TerminalNode* LengkuasSFLParser::ExpressionContext::AND() {
  return getToken(LengkuasSFLParser::AND, 0);
}


size_t LengkuasSFLParser::ExpressionContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleExpression;
}

void LengkuasSFLParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void LengkuasSFLParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


LengkuasSFLParser::ExpressionContext* LengkuasSFLParser::expression() {
   return expression(0);
}

LengkuasSFLParser::ExpressionContext* LengkuasSFLParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LengkuasSFLParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  LengkuasSFLParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, LengkuasSFLParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(94);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LengkuasSFLParser::IDENTIFIER:
      case LengkuasSFLParser::NUMBER:
      case LengkuasSFLParser::STRING:
      case LengkuasSFLParser::BOOLEAN:
      case LengkuasSFLParser::NIL:
      case LengkuasSFLParser::LPAREN: {
        setState(83);
        primaryExpression();
        setState(89);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(84);
            arithmeticOperator();
            setState(85);
            primaryExpression(); 
          }
          setState(91);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        }
        break;
      }

      case LengkuasSFLParser::NOT: {
        setState(92);
        match(LengkuasSFLParser::NOT);
        setState(93);
        expression(1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(104);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(102);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(96);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(97);
          match(LengkuasSFLParser::OR);
          setState(98);
          expression(4);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(99);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(100);
          match(LengkuasSFLParser::AND);
          setState(101);
          expression(3);
          break;
        }

        default:
          break;
        } 
      }
      setState(106);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- PrimaryExpressionContext ------------------------------------------------------------------

LengkuasSFLParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::NUMBER() {
  return getToken(LengkuasSFLParser::NUMBER, 0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::STRING() {
  return getToken(LengkuasSFLParser::STRING, 0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::BOOLEAN() {
  return getToken(LengkuasSFLParser::BOOLEAN, 0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::NIL() {
  return getToken(LengkuasSFLParser::NIL, 0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::IDENTIFIER() {
  return getToken(LengkuasSFLParser::IDENTIFIER, 0);
}

LengkuasSFLParser::TemplateLiteralContext* LengkuasSFLParser::PrimaryExpressionContext::templateLiteral() {
  return getRuleContext<LengkuasSFLParser::TemplateLiteralContext>(0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::LPAREN() {
  return getToken(LengkuasSFLParser::LPAREN, 0);
}

LengkuasSFLParser::ExpressionContext* LengkuasSFLParser::PrimaryExpressionContext::expression() {
  return getRuleContext<LengkuasSFLParser::ExpressionContext>(0);
}

tree::TerminalNode* LengkuasSFLParser::PrimaryExpressionContext::RPAREN() {
  return getToken(LengkuasSFLParser::RPAREN, 0);
}


size_t LengkuasSFLParser::PrimaryExpressionContext::getRuleIndex() const {
  return LengkuasSFLParser::RulePrimaryExpression;
}

void LengkuasSFLParser::PrimaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryExpression(this);
}

void LengkuasSFLParser::PrimaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryExpression(this);
}

LengkuasSFLParser::PrimaryExpressionContext* LengkuasSFLParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, LengkuasSFLParser::RulePrimaryExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(107);
      match(LengkuasSFLParser::NUMBER);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(108);
      match(LengkuasSFLParser::STRING);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(109);
      match(LengkuasSFLParser::BOOLEAN);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(110);
      match(LengkuasSFLParser::NIL);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(111);
      match(LengkuasSFLParser::IDENTIFIER);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(112);
      templateLiteral();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(113);
      match(LengkuasSFLParser::LPAREN);
      setState(114);
      expression(0);
      setState(115);
      match(LengkuasSFLParser::RPAREN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticOperatorContext ------------------------------------------------------------------

LengkuasSFLParser::ArithmeticOperatorContext::ArithmeticOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LengkuasSFLParser::ArithmeticOperatorContext::PLUS() {
  return getToken(LengkuasSFLParser::PLUS, 0);
}

tree::TerminalNode* LengkuasSFLParser::ArithmeticOperatorContext::MINUS() {
  return getToken(LengkuasSFLParser::MINUS, 0);
}

tree::TerminalNode* LengkuasSFLParser::ArithmeticOperatorContext::MULT() {
  return getToken(LengkuasSFLParser::MULT, 0);
}

tree::TerminalNode* LengkuasSFLParser::ArithmeticOperatorContext::DIV() {
  return getToken(LengkuasSFLParser::DIV, 0);
}

tree::TerminalNode* LengkuasSFLParser::ArithmeticOperatorContext::MOD() {
  return getToken(LengkuasSFLParser::MOD, 0);
}


size_t LengkuasSFLParser::ArithmeticOperatorContext::getRuleIndex() const {
  return LengkuasSFLParser::RuleArithmeticOperator;
}

void LengkuasSFLParser::ArithmeticOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithmeticOperator(this);
}

void LengkuasSFLParser::ArithmeticOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LengkuasSFLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithmeticOperator(this);
}

LengkuasSFLParser::ArithmeticOperatorContext* LengkuasSFLParser::arithmeticOperator() {
  ArithmeticOperatorContext *_localctx = _tracker.createInstance<ArithmeticOperatorContext>(_ctx, getState());
  enterRule(_localctx, 12, LengkuasSFLParser::RuleArithmeticOperator);
  size_t _la = 0;
